--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
   <style>
     body {
-      background: #0;
-      color: #cccccc;
+      background: #000000;
+      color: #000000;
       margin: 0px;
       padding: 0px;
       border: 0px;
